# jitCalc

./: CMakeLists.txt  README.md  main.cpp  parse.cpp  parse.h  sparse.h
codegen/: emit.cpp  emit.h  moduleBuilder.cpp  moduleBuilder.h  symbols.cpp  symbols.h
lexer/: lexer.cpp  lexer.h
parser/: ast.cpp  ast.h  grammar.y  parse.cpp  parse.h
passes/: PPProfiler.cpp  PPProfiler.h  ppprofiler_runtime.c
